feat: changes in file

--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://indiatube-clone.onrender.com/api"
+  "proxy": "https://indiatube-clone.onrender.com/api/"
 }
